--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/aggr/register.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/aggr/register.xhtml
@@ -10,23 +10,24 @@
         <div id="layout-portlets-cover">
             <div class="EmptyBox50"></div>
             <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+                 style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg);
+                 background-repeat:no-repeat; background-position:center; background-size:cover;">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form id="logonForm" prependId="false" styleClass="formPage">
                         <div class="EmptyBox50"></div>
                         <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
                                         class="MarAuto MarTop20 MarBot10"/>
                         <div class="EmptyBox20"></div>
-<div class="Container100" style="text-align: center;">
+                        <div class="Container100" style="text-align: center;">
 
-    <p:commandButton value="Register" styleClass="desktopModeButton" actionListener="#{aggrBean.processAggrRegistraion}" ajax="false" >
-        <f:param name="mode" value="DESKTOP" />
-    </p:commandButton>
+                            <p:commandButton value="Register" styleClass="desktopModeButton" actionListener="#{aggrBean.processAggrRegistraion}" ajax="false" >
+                                <f:param name="mode" value="DESKTOP" />
+                            </p:commandButton>
 
-    <p:commandButton value="Register" styleClass="mobileModeButton" actionListener="#{aggrBean.processAggrRegistraion}" ajax="false" >
-        <f:param name="mode" value="MOBILE" />
-            </p:commandButton>
-</div>
+                         <!--   <p:commandButton value="Register" styleClass="mobileModeButton" actionListener="#{aggrBean.processAggrRegistraion}" ajax="false" >
+                                <f:param name="mode" value="MOBILE" />
+                                    </p:commandButton>-->
+                        </div>
                         <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
