--- a/Invessence/modules/web/src/main/webapp/pages/advisor/crm/redTail/widget.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/crm/redTail/widget.xhtml
@@ -30,4 +30,15 @@
 
     </ui:define>
 
+    <script>
+
+        $(document).ready(function(){
+            $('.navbar-brand').addClass('hiddenall');
+            $('.navbar-brand').css("display", "none !important");
+            $("iframe").contents().find('.navbar-brand').addClass('hiddenall')
+
+        });
+
+    </script>
+
 </ui:composition>
