--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -5,8 +5,20 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
+    <div class="container100 progressbarsag">
+
+        <div class="loadPgNm">
+            <span class="active"> Goal </span>
+            <span> Assets </span>
+            <span> Liabilities </span>
+            <span> Risk </span>
+        </div>
+
+
+    </div>
+
     <div class="Container100">
-        <span class="Fs30 mainHeaderUOB">Overview</span>
+        <span class="Fs30 mainHeaderUOB">Goal</span>
     </div>
     <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
              style="margin-top: 7px;border: 0px; background: transparent"
