--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -6,6 +6,19 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
 
+    <div class="container100 progressbarsag">
+
+        <div class="loadPgNm">
+            <span class="done"> Goal </span>
+            <span class="done"> Assets </span>
+            <span class="active"> Liabilities </span>
+            <span> Risk </span>
+        </div>
+
+
+    </div>
+
+
     <div class="Container100">
         <span class="Fs30 mainHeaderUOB">Liabilities</span>
     </div>
