--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -5,6 +5,20 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
+    <div class="container100 progressbarsag">
+
+        <div class="loadPgNm">
+            <span class="done"> Goal </span>
+            <span class="active"> Assets </span>
+            <span> Liabilities </span>
+            <span> Risk </span>
+        </div>
+
+
+    </div>
+
+
+
     <div class="Container100">
         <span class="Fs30 mainHeaderUOB">Assets</span>
     </div>
