Prashant 08/16/2017 Testing Optimizer report features. Logon IP issues, and generic save/load customer profile data.

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/operations/tradereview.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/operations/tradereview.xhtml
@@ -166,7 +166,8 @@
                         </div>
 
                     </p:panel>
-                    <p:panel style="border: 0px; margin: 0px;" id="reviewpanel" rendered="#{tradeBean.displayReviewPanel}">
+                    <p:panel id="summarypanel" style="border: 0px; margin: 0px;"
+                             rendered="#{tradeBean.displayReviewPanel}">
                         <div class="Container50">
                             <div class="DispInlBlock">
                                 <p:panel id="displayInfo" styleClass="Fleft" style="border: 0px">
